--- a/assets/css/font-electro.css
+++ b/assets/css/font-electro.css
@@ -58,10 +58,10 @@
   content: "\63";
 }
 .ec-add-to-cart:before {
-  content: "\64";
+  content: "\e854";
 }
 .ec-arrow-right-categproes:before {
-  content: "\65";
+  content: "\e5cc";
 }
 .ec-comment:before {
   content: "\66";
